--- a/PTNeideSimoes/Base.lproj/Main.storyboard
+++ b/PTNeideSimoes/Base.lproj/Main.storyboard
@@ -66,8 +66,8 @@
                                     <color key="titleColor" red="0.54509803921568623" green="0.54509803921568623" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D2h-TX-Qkj" customClass="EmailControlXib" customModule="PTNeideSimoes" customModuleProvider="target">
-                                <rect key="frame" x="50" y="311" width="240" height="128"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SUN-fg-AW3" customClass="EmailTextFieldNib" customModule="PTNeideSimoes" customModuleProvider="target">
+                                <rect key="frame" x="67" y="294" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -82,13 +82,27 @@
                             <constraint firstItem="vB2-YT-KU0" firstAttribute="top" secondItem="pHq-pq-P65" secondAttribute="bottom" constant="5" id="hwg-8c-cec"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="emailControlXib" destination="D2h-TX-Qkj" id="cZj-uA-mPo"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="30.134932533733135"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dqV-9x-5cL">
+            <objects>
+                <viewController id="K6a-8d-Ci9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RAL-Ty-iCS"/>
+                        <viewControllerLayoutGuide type="bottom" id="HSu-KI-f5f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="34u-e2-Sjw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qCe-oB-mJY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
