--- a/PTNeideSimoes/Controls/EmailContorlXib.xib
+++ b/PTNeideSimoes/Controls/EmailContorlXib.xib
@@ -23,7 +23,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EmailControlXib" customModule="PTNeideSimoes" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="314" height="55"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
