--- a/PTNeideSimoes/Base.lproj/Main.storyboard
+++ b/PTNeideSimoes/Base.lproj/Main.storyboard
@@ -35,10 +35,10 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHq-pq-P65" customClass="BorderUIButton" customModule="PTNeideSimoes" customModuleProvider="target">
-                                <rect key="frame" x="86" y="556" width="204" height="60"/>
+                                <rect key="frame" x="66" y="556" width="244" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="C4J-jX-Qjb"/>
-                                    <constraint firstAttribute="width" constant="204" id="hgZ-T6-wiI"/>
+                                    <constraint firstAttribute="width" constant="244" id="rz2-tO-A8v"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="26"/>
                                 <state key="normal" title="LOGIN">
@@ -66,10 +66,13 @@
                                     <color key="titleColor" red="0.54509803921568623" green="0.54509803921568623" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SUN-fg-AW3" customClass="EmailTextFieldNib" customModule="PTNeideSimoes" customModuleProvider="target">
-                                <rect key="frame" x="67" y="294" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fVA-bP-nJo" customClass="EmailTextFieldNib" customModule="PTNeideSimoes" customModuleProvider="target">
+                                <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="J8F-Zm-8pD"/>
+                                    <constraint firstAttribute="height" constant="128" id="w9E-pw-rZe"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -79,30 +82,15 @@
                             <constraint firstAttribute="bottom" secondItem="vB2-YT-KU0" secondAttribute="bottom" constant="20" symbolic="YES" id="W0M-Sy-KsW"/>
                             <constraint firstItem="vB2-YT-KU0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="X46-P6-dJe"/>
                             <constraint firstItem="urv-YN-DcK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b0U-Np-Bew"/>
+                            <constraint firstItem="fVA-bP-nJo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="f0W-jX-4iM"/>
+                            <constraint firstItem="fVA-bP-nJo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fEO-rP-aU2"/>
                             <constraint firstItem="vB2-YT-KU0" firstAttribute="top" secondItem="pHq-pq-P65" secondAttribute="bottom" constant="5" id="hwg-8c-cec"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.800000000000001" y="30.134932533733135"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="dqV-9x-5cL">
-            <objects>
-                <viewController id="K6a-8d-Ci9" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="RAL-Ty-iCS"/>
-                        <viewControllerLayoutGuide type="bottom" id="HSu-KI-f5f"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="34u-e2-Sjw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qCe-oB-mJY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
+            <point key="canvasLocation" x="304" y="5"/>
         </scene>
     </scenes>
     <resources>
