--- a/PTNeideSimoes/Controls/EmailTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/EmailTextFieldNib.xib
@@ -17,32 +17,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailTextFieldNib" customModule="PTNeideSimoes" customModuleProvider="target">
             <connections>
+                <outlet property="emailTextField" destination="Vww-kF-3NN" id="Sbo-jW-7BX"/>
                 <outlet property="emailTextFieldNib" destination="iN0-l3-epB" id="cwF-zT-Fdn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="93"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vww-kF-3NN">
-                    <rect key="frame" x="10" y="10.5" width="355" height="29"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vww-kF-3NN">
+                    <rect key="frame" x="10" y="32" width="355" height="29"/>
+                    <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="29" id="PMf-Ng-0kh"/>
                     </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t8B-Ux-cNf">
-                    <rect key="frame" x="0.0" y="39.5" width="375" height="2"/>
+                    <rect key="frame" x="0.0" y="61" width="375" height="2"/>
                     <color key="backgroundColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="WQc-8u-hpe"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="t8B-Ux-cNf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="BL3-7l-AKX"/>
                 <constraint firstItem="Vww-kF-3NN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="U9s-gn-sBC"/>
@@ -53,7 +55,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="45.5" y="368"/>
+            <point key="canvasLocation" x="45.5" y="389.5"/>
         </view>
     </objects>
 </document>
