--- a/PTNeideSimoes/Base.lproj/Login.storyboard
+++ b/PTNeideSimoes/Base.lproj/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ikH-4D-May">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -125,6 +125,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="303.19999999999999" y="4.9475262368815596"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="roh-ae-gob">
+            <objects>
+                <viewController id="ikH-4D-May" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Xs-La-By9"/>
+                        <viewControllerLayoutGuide type="bottom" id="vqC-wt-rLz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1s9-Pw-7aa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <connections>
+                        <segue destination="y27-nP-74s" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="mAg-te-IQY"/>
+                        <segue destination="Gvr-EG-VDK" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="izn-Se-mBu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jq1-R7-yb3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="303" y="736"/>
+        </scene>
+        <!--User Menu View Controller-->
+        <scene sceneID="ZgH-vG-VyI">
+            <objects>
+                <viewController id="y27-nP-74s" customClass="UserMenuViewController" customModule="PTNeideSimoes" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UKL-5M-4h3"/>
+                        <viewControllerLayoutGuide type="bottom" id="UK1-lu-fYu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qf5-dN-28W">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jKt-47-yJx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1135" y="735"/>
+        </scene>
+        <!--User Entrance View Controller-->
+        <scene sceneID="Cbu-9P-pHP">
+            <objects>
+                <viewController id="Gvr-EG-VDK" customClass="UserEntranceViewController" customModule="PTNeideSimoes" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iaj-bE-i6T"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ofn-OP-Lsw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Flz-M1-YNj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0aU-v6-X8q">
+                                <rect key="frame" x="16" y="20" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <connections>
+                        <outlet property="menuUIButton" destination="0aU-v6-X8q" id="u3T-2P-7Me"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Amn-CF-H1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1086" y="1527"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="Zba-eV-Eft">
