created Gradient View

--- a/PTNeideSimoes/Base.lproj/Login.storyboard
+++ b/PTNeideSimoes/Base.lproj/Login.storyboard
@@ -156,7 +156,7 @@
                         <viewControllerLayoutGuide type="top" id="UKL-5M-4h3"/>
                         <viewControllerLayoutGuide type="bottom" id="UK1-lu-fYu"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="qf5-dN-28W">
+                    <view key="view" contentMode="scaleToFill" id="qf5-dN-28W" customClass="GradientView" customModule="PTNeideSimoes" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
