--- a/PTNeideSimoes/Controls/EmailTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/EmailTextFieldNib.xib
@@ -6,11 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Avenir.ttc">
+            <string>Avenir-BlackOblique</string>
             <string>Avenir-Book</string>
         </array>
     </customFonts>
@@ -19,6 +21,7 @@
             <connections>
                 <outlet property="emailTextField" destination="Vww-kF-3NN" id="Sbo-jW-7BX"/>
                 <outlet property="emailTextFieldNib" destination="iN0-l3-epB" id="cwF-zT-Fdn"/>
+                <outlet property="requiredLabel" destination="9Cq-Kv-P31" id="Aq2-Cq-Fx3"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,6 +38,10 @@
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                     <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
+                    <connections>
+                        <action selector="userEndEditing:" destination="-1" eventType="editingDidEnd" id="bni-bN-LRf"/>
+                        <action selector="userPressedTextField:" destination="-1" eventType="editingDidBegin" id="A5L-gf-yCY"/>
+                    </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t8B-Ux-cNf">
                     <rect key="frame" x="0.0" y="61" width="375" height="2"/>
@@ -43,10 +50,18 @@
                         <constraint firstAttribute="height" constant="2" id="WQc-8u-hpe"/>
                     </constraints>
                 </view>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campo obrigatório" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Cq-Kv-P31">
+                    <rect key="frame" x="276" y="24.5" width="99" height="15.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="9Cq-Kv-P31" firstAttribute="centerY" secondItem="Vww-kF-3NN" secondAttribute="top" id="7Zu-CO-4cE"/>
                 <constraint firstItem="t8B-Ux-cNf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="BL3-7l-AKX"/>
+                <constraint firstItem="9Cq-Kv-P31" firstAttribute="trailing" secondItem="t8B-Ux-cNf" secondAttribute="trailing" id="OiX-BG-oFB"/>
                 <constraint firstItem="Vww-kF-3NN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="U9s-gn-sBC"/>
                 <constraint firstItem="t8B-Ux-cNf" firstAttribute="top" secondItem="Vww-kF-3NN" secondAttribute="bottom" id="fBg-zd-vz1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Vww-kF-3NN" secondAttribute="trailing" constant="10" id="rhO-FO-cIk"/>
