--- a/PTNeideSimoes/Controls/NameTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/NameTextFieldNib.xib
@@ -6,11 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Avenir.ttc">
+            <string>Avenir-BlackOblique</string>
             <string>Avenir-Book</string>
         </array>
     </customFonts>
@@ -19,6 +21,7 @@
             <connections>
                 <outlet property="nameTextField" destination="otk-yn-Amg" id="1AT-aC-Kpr"/>
                 <outlet property="nameTextFieldNib" destination="iN0-l3-epB" id="9dc-Qg-EpE"/>
+                <outlet property="requiredLabel" destination="jeZ-e9-1gl" id="DHz-V9-FAD"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,6 +38,10 @@
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                     <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <action selector="userEndEditing:" destination="-1" eventType="editingDidEnd" id="oKi-E8-ZsA"/>
+                        <action selector="userPressedTextField:" destination="-1" eventType="editingDidBegin" id="SYC-DF-pHY"/>
+                    </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HTL-FP-JVv">
                     <rect key="frame" x="0.0" y="39.5" width="375" height="2"/>
@@ -43,14 +50,22 @@
                         <constraint firstAttribute="height" constant="2" id="cBy-xI-ChI"/>
                     </constraints>
                 </view>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campo obrigatório" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jeZ-e9-1gl">
+                    <rect key="frame" x="276" y="3" width="99" height="15.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="otk-yn-Amg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="9kk-sA-cTw"/>
+                <constraint firstItem="jeZ-e9-1gl" firstAttribute="centerY" secondItem="otk-yn-Amg" secondAttribute="top" id="DMM-Xv-Xfu"/>
                 <constraint firstItem="otk-yn-Amg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Xmy-P2-15l"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="otk-yn-Amg" secondAttribute="trailing" constant="10" id="Xv0-Yx-kIQ"/>
                 <constraint firstItem="HTL-FP-JVv" firstAttribute="top" secondItem="otk-yn-Amg" secondAttribute="bottom" id="deL-H2-c5j"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HTL-FP-JVv" secondAttribute="trailing" id="l73-gW-taf"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="otk-yn-Amg" secondAttribute="trailing" constant="10" id="qto-UA-bq2"/>
+                <constraint firstItem="jeZ-e9-1gl" firstAttribute="trailing" secondItem="HTL-FP-JVv" secondAttribute="trailing" id="sOv-CB-sWl"/>
                 <constraint firstItem="HTL-FP-JVv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="x4r-sz-CQh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
