--- a/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
@@ -6,11 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Avenir.ttc">
+            <string>Avenir-BlackOblique</string>
             <string>Avenir-Book</string>
         </array>
     </customFonts>
@@ -19,6 +21,8 @@
             <connections>
                 <outlet property="passwordTextField" destination="ocs-eK-53P" id="6hd-JW-O7c"/>
                 <outlet property="passwordTextFieldNib" destination="iN0-l3-epB" id="ueo-v7-kP2"/>
+                <outlet property="requiredLabel" destination="yIz-Og-fz7" id="ppD-to-f1O"/>
+                <outlet property="shortLabel" destination="r7E-l9-sfW" id="eTF-8U-oGm"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,6 +39,10 @@
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                     <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                    <connections>
+                        <action selector="userEndEditing:" destination="-1" eventType="editingDidEnd" id="R20-Xp-yFH"/>
+                        <action selector="userPressedTextField:" destination="-1" eventType="editingDidBegin" id="dYc-nu-tg3"/>
+                    </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kTi-Sw-cd4">
                     <rect key="frame" x="0.0" y="49.5" width="375" height="2"/>
@@ -43,12 +51,28 @@
                         <constraint firstAttribute="height" constant="2" id="TRW-Qs-33N"/>
                     </constraints>
                 </view>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campo obrigatório" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIz-Og-fz7">
+                    <rect key="frame" x="276" y="13" width="99" height="15.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min. 6 caracteres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7E-l9-sfW">
+                    <rect key="frame" x="285.5" y="13" width="89.5" height="15.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="yIz-Og-fz7" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="6qP-qW-kk5"/>
+                <constraint firstItem="r7E-l9-sfW" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="DUf-qg-mtr"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ocs-eK-53P" secondAttribute="trailing" constant="10" id="EqP-Ok-crq"/>
                 <constraint firstItem="ocs-eK-53P" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="HxL-Qd-W6r"/>
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="asK-qz-dVC"/>
+                <constraint firstItem="r7E-l9-sfW" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="bQf-sS-UGc"/>
+                <constraint firstItem="yIz-Og-fz7" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="cm3-X9-nGK"/>
                 <constraint firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="mmV-PK-0aZ"/>
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="top" secondItem="ocs-eK-53P" secondAttribute="bottom" id="qML-A4-FcA"/>
                 <constraint firstItem="ocs-eK-53P" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="y2x-ZP-D4i"/>
