--- a/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
@@ -19,10 +19,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasswordTextFieldNib" customModule="PTNeideSimoes" customModuleProvider="target">
             <connections>
+                <outlet property="differentPasswords" destination="hFT-OC-yVD" id="qIO-Xu-rbD"/>
                 <outlet property="passwordTextField" destination="ocs-eK-53P" id="6hd-JW-O7c"/>
                 <outlet property="passwordTextFieldNib" destination="iN0-l3-epB" id="ueo-v7-kP2"/>
                 <outlet property="requiredLabel" destination="yIz-Og-fz7" id="ppD-to-f1O"/>
                 <outlet property="shortLabel" destination="r7E-l9-sfW" id="eTF-8U-oGm"/>
+                <outlet property="wrongCode" destination="TJd-ck-api" id="j9X-RK-Lcb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -40,7 +42,6 @@
                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                     <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                     <connections>
-                        <action selector="userEndEditing:" destination="-1" eventType="editingDidEnd" id="R20-Xp-yFH"/>
                         <action selector="userPressedTextField:" destination="-1" eventType="editingDidBegin" id="dYc-nu-tg3"/>
                     </connections>
                 </textField>
@@ -63,6 +64,18 @@
                     <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passwords diferentes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFT-OC-yVD">
+                    <rect key="frame" x="263.5" y="12.5" width="111.5" height="16"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Código errado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJd-ck-api">
+                    <rect key="frame" x="299" y="12.5" width="76" height="16"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -70,11 +83,15 @@
                 <constraint firstItem="r7E-l9-sfW" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="DUf-qg-mtr"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ocs-eK-53P" secondAttribute="trailing" constant="10" id="EqP-Ok-crq"/>
                 <constraint firstItem="ocs-eK-53P" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="HxL-Qd-W6r"/>
+                <constraint firstItem="TJd-ck-api" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="Is7-de-jXP"/>
+                <constraint firstItem="TJd-ck-api" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="JFY-MB-LYi"/>
+                <constraint firstItem="hFT-OC-yVD" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="RZL-0Y-yyM"/>
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="asK-qz-dVC"/>
                 <constraint firstItem="r7E-l9-sfW" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="bQf-sS-UGc"/>
                 <constraint firstItem="yIz-Og-fz7" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="cm3-X9-nGK"/>
                 <constraint firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="mmV-PK-0aZ"/>
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="top" secondItem="ocs-eK-53P" secondAttribute="bottom" id="qML-A4-FcA"/>
+                <constraint firstItem="hFT-OC-yVD" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="vq2-w4-Dc5"/>
                 <constraint firstItem="ocs-eK-53P" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="y2x-ZP-D4i"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
