--- a/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
+++ b/PTNeideSimoes/Controls/PasswordTextFieldNib.xib
@@ -25,6 +25,7 @@
                 <outlet property="requiredLabel" destination="yIz-Og-fz7" id="ppD-to-f1O"/>
                 <outlet property="shortLabel" destination="r7E-l9-sfW" id="eTF-8U-oGm"/>
                 <outlet property="wrongCode" destination="TJd-ck-api" id="j9X-RK-Lcb"/>
+                <outlet property="wrongPassword" destination="9v6-nY-1P2" id="PUA-eb-VDP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -76,6 +77,12 @@
                     <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password errada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9v6-nY-1P2">
+                    <rect key="frame" x="287.5" y="12.5" width="87.5" height="16"/>
+                    <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="11"/>
+                    <color key="textColor" red="0.87843137250000003" green="0.098039215690000001" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -89,7 +96,9 @@
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="asK-qz-dVC"/>
                 <constraint firstItem="r7E-l9-sfW" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="bQf-sS-UGc"/>
                 <constraint firstItem="yIz-Og-fz7" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="cm3-X9-nGK"/>
+                <constraint firstItem="9v6-nY-1P2" firstAttribute="centerY" secondItem="ocs-eK-53P" secondAttribute="top" id="fpk-36-9f3"/>
                 <constraint firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="mmV-PK-0aZ"/>
+                <constraint firstItem="9v6-nY-1P2" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="mx1-Ew-JJB"/>
                 <constraint firstItem="kTi-Sw-cd4" firstAttribute="top" secondItem="ocs-eK-53P" secondAttribute="bottom" id="qML-A4-FcA"/>
                 <constraint firstItem="hFT-OC-yVD" firstAttribute="trailing" secondItem="kTi-Sw-cd4" secondAttribute="trailing" id="vq2-w4-Dc5"/>
                 <constraint firstItem="ocs-eK-53P" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="y2x-ZP-D4i"/>
